:sparkles: feat:[CBM-2-3] Create breed presentation layer list home

--- a/libs/dstools/src/main/res/values/colors.xml
+++ b/libs/dstools/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="black">#060606</color>
     <color name="red">#780303</color>
     <color name="color_movie_title_backdrop">#009688</color>
+    <color name="purple">#FF3700B3</color>
 </resources>
