--- a/features/breeds/src/main/res/layout/home_item_breed.xml
+++ b/features/breeds/src/main/res/layout/home_item_breed.xml
@@ -18,7 +18,7 @@
             android:id="@+id/image_tv"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="16:9"
             app:layout_constraintEnd_toEndOf="parent"
