--- a/libs/dstools/src/main/res/values/colors.xml
+++ b/libs/dstools/src/main/res/values/colors.xml
@@ -3,7 +3,6 @@
     <color name="grey">#BDBEBF</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#060606</color>
-    <color name="red">#780303</color>
-    <color name="color_movie_title_backdrop">#009688</color>
     <color name="purple">#FF3700B3</color>
+    <color name="gray">#929096</color>
 </resources>
