--- a/features/breeds/src/main/res/layout/home_item_breed.xml
+++ b/features/breeds/src/main/res/layout/home_item_breed.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/card_breed"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
-    tools:context=".presentation.BreedFragment">
+    android:layout_marginStart="@dimen/dimen_4"
+    android:layout_marginTop="@dimen/dimen_4"
+    app:cardCornerRadius="@dimen/dimen_8"
+    app:cardElevation="@dimen/dimen_0"
+    app:strokeColor="@color/stroke_color_card"
+    app:strokeWidth="@dimen/dimen_2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/image_tv"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="16:9"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+        android:layout_width="124dp"
+        android:layout_height="wrap_content"
+        android:background="@color/black">
 
         <TextView
             android:id="@+id/breedTv"
-            style="@style/TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:ellipsize="end"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:maxLines="2"
+            android:padding="@dimen/dimen_8"
+            android:textColor="#FFF"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="@tools:sample/lorem" />
+            tools:text="@tools:sample/last_names"/>
 
-        <TextView
-            android:id="@+id/originTv"
-            style="@style/TextAppearance.AppCompat.Medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textStyle="bold"
-            android:layout_marginEnd="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/image_tv"
+            android:layout_width="112dp"
+            android:layout_height="112dp"
+            android:background="@drawable/ic_placeholder_cat"
+            android:importantForAccessibility="no"
+            android:padding="@dimen/dimen_4"
+            android:scaleType="fitXY"
+            android:translationY="@dimen/dimen_12"
+            app:layout_constraintBottom_toTopOf="@id/breedTv"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="@tools:sample/lorem" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearance="@style/imageCircle"
+            app:strokeColor="@color/stroke_color_card"
+            app:strokeWidth="@dimen/dimen_2"
+            tools:srcCompat="@tools:sample/avatars" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+
+</com.google.android.material.card.MaterialCardView>
