--- a/libs/dstools/src/main/res/values/colors.xml
+++ b/libs/dstools/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="black">#060606</color>
     <color name="purple">#FF3700B3</color>
     <color name="gray">#929096</color>
+    <color name="stroke_color_card">#282828</color>
 </resources>
