--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/dashboardFragment"
+        android:id="@+id/breedFragment"
         android:enabled="true"
         android:icon="@drawable/ic_home"
         android:title="@string/app_bottom_navigation_home"
