:sparkles: feat: [CBM-3-3] Create search module presentation

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/breedFragment"
+        android:id="@+id/home"
         android:enabled="true"
         android:icon="@drawable/ic_home"
         android:title="@string/app_bottom_navigation_home"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/searchFragment"
+        android:id="@+id/search"
         android:enabled="true"
         android:icon="@drawable/ic_search"
         android:title="@string/app_bottom_navigation_search"
